@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.63 2004/06/13 15:18:49 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.64 2004/06/13 15:48:51 zhen Exp $
+
+  13 Jun 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
+  livecd/runscript-support/livecdfs-update.sh:
+  some last minute fixins
+  (stuff to work with the new genkernel)
 
   13 Jun 2004; John Davis <zhen@gentoo.org> catalyst:
   rolling out 1.0.8.1
